# APC-assignments

./: README.md
assignment_1/matrixlib/: Assignment1_2024  CMakeLists.txt  main.cpp
assignment_1/matrixlib/headers/: squarematrix.h
assignment_1/matrixlib/src/: inverse_power_iteration.cpp  matrixhelpers.cpp  power_iteration.cpp  shift_inverse_power_iteration.cpp  squarematrix.cpp  vectorhelpers.cpp
